[package]
name = "gamerplex-renderer"
version = "0.1.0"
edition = "2021"

[dependencies]
wgpu = "24.0.3"
bytemuck = { version = "1.22.0", features = ["derive"] }
gamerplex-math = { path = "../gamerplex-math" }
winit = "0.30.9"
pollster = "0.4.0"
log = "0.4"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.41"
web-sys = { version = "0.3.77", features = [
    "Document",
    "Window",
    "Element",
    "HtmlCanvasElement",
]}
console_log = "1.0"
console_error_panic_hook = "0.1.7"